--- a/mgh_760.md
+++ b/mgh_760.md
@@ -1,3 +1,4 @@
+# MGH Single Subject 760µm dMRI data
 ![mgh_760](/images/MGH760.png)![mgh_760](/images/MGH760_2.png)
 
 ## Download
@@ -24,3 +25,14 @@
 ## Reference
 
 Wang F, Dong Z, Tian Q, Liao C, Fan Q, Hoge WS, Keil B, Polimeni JR, Wald LL, Huang SY, Setsompop K. In vivo human whole-brain Connectom diffusion MRI dataset at 760 µm isotropic resolution. Scientific Data. 2021 Apr 29;8(1):1-2.
+
+# MGH Single Subject 100µm T2W data
+
+![mgh_100](/images/EAaNB3fWwAYwVXx.jfif)
+
+## Download
+
+- [MGH's 100-micron human scan](https://pitt-my.sharepoint.com/:u:/g/personal/yehfc_pitt_edu/Efe6J5DQiyNHtpJMAgslA0sBNc-2CaHkFsrgXxQYJ9iCFw?e=g3L2Uo)
+
+## Reference
+Edlow, B.L., Mareyam, A., Horn, A., Polimeni, J.R., Witzel, T., Tisdall, M.D., Augustinack, J.C., Stockmann, J.P., Diamond, B.R., Stevens, A. and Tirrell, L.S., 2019. 7 Tesla MRI of the ex vivo human brain at 100 micron resolution. *Scientific data*, *6*(1), pp.1-10.
