--- a/mgh_760.md
+++ b/mgh_760.md
@@ -4,13 +4,12 @@
 ## Download
 
 - [SRC and FIB files](https://pitt-my.sharepoint.com/:f:/g/personal/yehfc_pitt_edu/Eh-4FuH31g1Fg1VPDDc1aqABOj-tD6XmdOisauQb0tA-3A?e=ghQiZq)
-
-  - MGH_0.7mm_DWI.src.gz
-    DWI signals and associated b-table aggregated in one file
-  - MGH_0.7mm_DWI.src.gz.gqi.1.25.fib.gz
-    DWI data reconstructed in the native space
-  - MGH_0.7mm_DWI.src.gz.hcp1065.qsdr.1.25.R65.fib.gz
-    DWI data reconstructed to the ICBM152 space, ready to align with BigBrain and other ICBM152 space data
+  
+  The FIB file is ready-to-track and can be opened in [DSI Studio](http://dsi-studio.labsolver.org) to perform fiber tracking.
+  
+  - MGH_0.7mm_DWI.src.gz.hcp1065.qsdr.1.25.R65.fib.gz *(DWI data reconstructed to the ICBM152 space, ready to align with BigBrain and other ICBM152 space data)*
+  - MGH_0.7mm_DWI.src.gz.gqi.1.25.fib.gz *(DWI data reconstructed in the native space)*
+  - MGH_0.7mm_DWI.src.gz *(DWI signals and associated b-table aggregated in one file)*
 
   **Methods**
   > A multishell diffusion scheme was used, and the b-values were 1000 and 2500 s/mm2. The number of diffusion sampling directions were 840 and 1680, respectively. The in-plane resolution was 0.76 mm. The slice thickness was 0.76 mm. The diffusion data were reconstructed in the MNI space at 0.5 mm using q-space diffeomorphic reconstruction (Yeh et al., Neuroimage, 58(1):91-9, 2011) to obtain the spin distribution function (Yeh et al., IEEE TMI, ;29(9):1626-35, 2010).  A diffusion sampling length ratio of 1.25 was used The output resolution of is 0.5 mm isotorpic. The restricted diffusion was quantified using restricted diffusion imaging (Yeh et al., MRM, 77:603--612 (2017)).
@@ -26,7 +25,10 @@
 
 Wang F, Dong Z, Tian Q, Liao C, Fan Q, Hoge WS, Keil B, Polimeni JR, Wald LL, Huang SY, Setsompop K. In vivo human whole-brain Connectom diffusion MRI dataset at 760 µm isotropic resolution. Scientific Data. 2021 Apr 29;8(1):1-2.
 
-# MGH Single Subject 100µm T2W data
+
+
+
+# MGH Single Subject 100µm MRI
 
 ![mgh_100](/images/EAaNB3fWwAYwVXx.jfif)
 
