--- a/mgh_760.md
+++ b/mgh_760.md
@@ -34,7 +34,9 @@ Wang F, Dong Z, Tian Q, Liao C, Fan Q, Hoge WS, Keil B, Polimeni JR, Wald LL, Hu
 
 ## Download
 
-- [MGH's 100-micron human scan](https://pitt-my.sharepoint.com/:u:/g/personal/yehfc_pitt_edu/Efe6J5DQiyNHtpJMAgslA0sBNc-2CaHkFsrgXxQYJ9iCFw?e=g3L2Uo)
+- [NIFTI format](https://pitt-my.sharepoint.com/:u:/g/personal/yehfc_pitt_edu/Efe6J5DQiyNHtpJMAgslA0sBNc-2CaHkFsrgXxQYJ9iCFw?e=g3L2Uo)
+  
+  The NIFTI file is an image volume. It is mainly used to reveal detailed structures and cannot be used to track fiber pathways.
 
 ## Reference
 Edlow, B.L., Mareyam, A., Horn, A., Polimeni, J.R., Witzel, T., Tisdall, M.D., Augustinack, J.C., Stockmann, J.P., Diamond, B.R., Stevens, A. and Tirrell, L.S., 2019. 7 Tesla MRI of the ex vivo human brain at 100 micron resolution. *Scientific data*, *6*(1), pp.1-10.
