--- a/mgh_760.md
+++ b/mgh_760.md
@@ -3,9 +3,12 @@
 
 ## Download
 
-- [SRC and FIB files](https://pitt-my.sharepoint.com/:f:/g/personal/yehfc_pitt_edu/Eh-4FuH31g1Fg1VPDDc1aqABOj-tD6XmdOisauQb0tA-3A?e=ghQiZq)
+- [SRC, FIB, TT files](https://pitt-my.sharepoint.com/:f:/g/personal/yehfc_pitt_edu/Eh-4FuH31g1Fg1VPDDc1aqABOj-tD6XmdOisauQb0tA-3A?e=ghQiZq)
   
-  The FIB file is ready-to-track and can be opened in [DSI Studio](http://dsi-studio.labsolver.org) to perform fiber tracking.
+  The FIB file is ready-to-track and can be opened in [DSI Studio](http://dsi-studio.labsolver.org) to perform fiber tracking. To track the data, download DSI Studio at dsi-studio.labsolver.org and open the FIB.gz file in [Step T3 Fiber Tracking]. The figures were created by whole brain tracking of 500,000 tracks and cut at mid-brain and pons level using [Edit][Cut by slice][Cut Z+]
+  
+  The SRC file contains raw dMRI signals and can be used to generate FIB files.
+  The TT file under /tract folder are tractography files.
   
   - MGH_0.7mm_DWI.src.gz.hcp1065.qsdr.1.25.R65.fib.gz *(DWI data reconstructed to the ICBM152 space, ready to align with BigBrain and other ICBM152 space data)*
   - MGH_0.7mm_DWI.src.gz.gqi.1.25.fib.gz *(DWI data reconstructed in the native space)*
@@ -14,7 +17,7 @@
   **Methods**
   > A multishell diffusion scheme was used, and the b-values were 1000 and 2500 s/mm2. The number of diffusion sampling directions were 840 and 1680, respectively. The in-plane resolution was 0.76 mm. The slice thickness was 0.76 mm. The diffusion data were reconstructed in the MNI space at 0.5 mm using q-space diffeomorphic reconstruction (Yeh et al., Neuroimage, 58(1):91-9, 2011) to obtain the spin distribution function (Yeh et al., IEEE TMI, ;29(9):1626-35, 2010).  A diffusion sampling length ratio of 1.25 was used The output resolution of is 0.5 mm isotorpic. The restricted diffusion was quantified using restricted diffusion imaging (Yeh et al., MRM, 77:603--612 (2017)).
 
-  To track the data, download DSI Studio at dsi-studio.labsolver.org and open the FIB.gz file in [Step T3 Fiber Tracking]. The figures were created by whole brain tracking of 500,000 tracks and cut at mid-brain and pons level using [Edit][Cut by slice][Cut Z+]
+  
 
 ## License
 
